a6osx/zlib/configure.log
--------------------
./configure --64
Sat Jan 28 21:33:46 CST 2017
Checking for gcc...
=== ztest2622.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest2622.c
using rtags wrapper
... using gcc

Checking for obsessive-compulsive compiler options...
=== ztest2622.c ===
int foo() { return 0; }
===
gcc -c -m64 -m64 ztest2622.c
using rtags wrapper

Checking for shared library support...
=== ztest2622.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -w -c -m64 -fPIC -m64 ztest2622.c
using rtags wrapper
gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8 -m64 -fPIC -m64 -o ztest2622.dylib ztest2622.o
using rtags wrapper
Building shared library libz.1.2.8.dylib with gcc.

=== ztest2622.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -m64 -m64 -D_LARGEFILE64_SOURCE=1 ztest2622.c
using rtags wrapper
ztest2622.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest2622.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -m64 -m64 -o ztest2622 ztest2622.c
using rtags wrapper
Checking for fseeko... Yes.

=== ztest2622.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -m64 -m64 -o ztest2622 ztest2622.c
using rtags wrapper
Checking for strerror... Yes.

=== ztest2622.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -m64 -m64 ztest2622.c
using rtags wrapper
Checking for unistd.h... Yes.

=== ztest2622.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -m64 -m64 ztest2622.c
using rtags wrapper
Checking for stdarg.h... Yes.

=== ztest2622.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -m64 -m64 ztest2622.c
using rtags wrapper
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest2622.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -m64 -m64 -o ztest2622 ztest2622.c
using rtags wrapper
Checking for vsnprintf() in stdio.h... Yes.

=== ztest2622.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -m64 -m64 ztest2622.c
using rtags wrapper
Checking for return value of vsnprintf()... Yes.

=== ztest2622.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -m64 -m64 ztest2622.c
using rtags wrapperChecking for attribute(visibility) support... No.

ALL = static shared
AR = libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -m64 -m64
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.8
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -m64 -fPIC -m64
SHAREDLIB = libz.dylib
SHAREDLIBM = libz.1.dylib
SHAREDLIBV = libz.1.2.8.dylib
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Darwin
--------------------


